<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Educational App</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\n\nCONTENT</string>
    <string name="intro_toast">Tap the screen to skip intro</string>
    <string name="main_menu_title">Become a Jedi Master</string>
    <string name="main_menu_description">Answer correctly 10 questions to receive your Jedi Master Diploma.\n\nQuestions are random, so every time you restart the test you will face a different challenge. Most of the time there will be a single correct answer from several options, but some answers are multiple selection or even free text.\n\nMay the Force be with you!</string>
    <string name="begin_test">Begin Test</string>
    <string name="hall_of_fame">Hall of Fame</string>
    <string name="go_back">Back</string>
    <string name="type_your_name">Type your name below, young Padawan (max. 16 characters):</string>
    <string name="type_your_name_hint">Your name</string>
    <string name="type_your_name_error">Name field cannot be empty</string>
    <string name="question_title">Question #<xliff:g example="2" id="number">%d</xliff:g></string>
    <string name="check_box_advice">Pay attention, <xliff:g example="David" id="name">%s</xliff:g>, this question may have multiple right answers.</string>
    <string name="submit_answer">Submit answer</string>
    <string name="edit_text_advice">Watch your spelling carefully, <xliff:g example="David" id="name">%s</xliff:g>. Maybe you know the correct answer, but if you misspell it, it will be considered an error.</string>
    <string name="edit_text_quiz_hint">Type your answer here</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="radio_button_mandatory">You must select one option</string>
    <string name="check_box_mandatory">Select one option at least</string>
    <string name="type_answer_error">Answer cannot be empty</string>
    <string name="try_again">Try again</string>
    <string name="get_your_diploma">Get your Diploma!</string>
    <string name="test_result_header"><xliff:g example="David" id="name">%s</xliff:g>, this is the result of your test:</string>
    <string name="jedi_master">Jedi Master</string>
    <string name="diploma_third_line">Issued in a galaxy far, far away, on <xliff:g example="01/01/2017" id="date">%s</xliff:g></string>
    <string name="diploma_first_line">The Jedi High Council certifies that</string>
    <string name="diploma_second_line">has successfully completed the required studies and fulfilled the requeriments of this Academy and, in testimony whereof, has been recognized to the title of</string>
    <string name="result_activity_background">Star Wars Celebration</string>
    <string name="background_layer">Background Layer</string>
    <string name="header_image">Android Basics Nanodegree</string>
    <string name="default_test_result">1/10</string>
    <string name="default_text">Lorem ipsum dolor sit amet</string>
    <string name="test_result_comments_0">For goodness\' sake! You got a lower score than Jar Jar Binks &#8230;\n\nIt\'s amazing, not even an Ewok would make it worse. Tell me the truth: you really are a Star Trek fan, right?</string>
    <string name="test_result_comments_1">Congratulations! &#8230; I say it wryly, of course. You could not get a higher score than Jar Jar Binks, the most awkward creature in the Galaxy!\n\nYou must improve a lot, young Padawan.</string>
    <string name="test_result_comments_2">Very bad! You\'ve got the same score than Boba Fett, who didn\'t study for the exam without and also got caught copying.\n\nAt least you will be allowed to do the test again.</string>
    <string name="test_result_comments_3">What can I say &#8230; You haven\'t been able to overcome Chebwacca\'s level of knowledge.\n\nAt least you have not taken it as badly as he did, and the teacher is still holding his head &#8230; on his shoulders.</string>
    <string name="test_result_comments_4">You\'ve got the same rating than R2-D2.\n\nOf course he has no arms to select the correct answers on the test &#8230; What is your excuse?</string>
    <string name="test_result_comments_5">You\'ve passed by the skin of your teeth.\n\nYou have answered as many questions as Padme Amidala, who didn\'t study for the test because he had just started dating Anakin and had her head in the clouds.</string>
    <string name="test_result_comments_6">Well, it\'s not bad at all.\n\nPrincess Leia got the same rating than you, though she was more concerned about some Galactic Senate affairs. Maybe you could do it a little better.</string>
    <string name="test_result_comments_7">Hey, very good level!\n\nObi Wan also correctly answered 7 questions, but that happened when he was young. If he had taken this test during the Classic Trilogy, he would have scored all the 10 questions, for sure.</string>
    <string name="test_result_comments_8">Hurrah! You have reached the same level of success than Luke Skywalker!\n\nIt is obvious that The Force is strong with you. Keep it up and you will become a Jedi Master soon.</string>
    <string name="test_result_comments_9">Awesome! You have the same level of knowledge than Darth Vader himself!\n\nWell, he actually answered all the 10 questions, but they took one point off by going over to the Dark Side &#8230;</string>
    <string name="test_result_comments_10">Congratulations!!! You are a true Star Wars fan! You answered all the questions and have reached the level of a Jedi Master, like Yoda!\n\nYou can pick up your Diploma, you really deserve it!</string>
    <string name="check_box_question_1">Which of these years are release dates of some Star Wars movie?</string>
    <string name="check_box_question_1_answer_1">1977</string>
    <string name="check_box_question_1_answer_2">1978</string>
    <string name="check_box_question_1_answer_3">1979</string>
    <string name="check_box_question_1_answer_4">1980</string>
    <string name="check_box_question_1_answer_1_is_correct">true</string>
    <string name="check_box_question_1_answer_2_is_correct">false</string>
    <string name="check_box_question_1_answer_3_is_correct">false</string>
    <string name="check_box_question_1_answer_4_is_correct">true</string>
    <string name="check_box_question_2">Which of these actors or actresses had a cameo in any Star Wars movie?</string>
    <string name="check_box_question_2_answer_1">Simon Pegg</string>
    <string name="check_box_question_2_answer_2">Daniel Graig</string>
    <string name="check_box_question_2_answer_3">Kevin Smith</string>
    <string name="check_box_question_2_answer_4">Sofia Coppola</string>
    <string name="check_box_question_2_answer_1_is_correct">true</string>
    <string name="check_box_question_2_answer_2_is_correct">true</string>
    <string name="check_box_question_2_answer_3_is_correct">true</string>
    <string name="check_box_question_2_answer_4_is_correct">true</string>
    <string name="check_box_question_3">Which of these starships fought at the Battle of Yavin?</string>
    <string name="check_box_question_3_answer_1">Millennium Falcon</string>
    <string name="check_box_question_3_answer_2">X-Wing</string>
    <string name="check_box_question_3_answer_3">Star Destroyer</string>
    <string name="check_box_question_3_answer_4">TIE Fighter</string>
    <string name="check_box_question_3_answer_1_is_correct">true</string>
    <string name="check_box_question_3_answer_2_is_correct">true</string>
    <string name="check_box_question_3_answer_3_is_correct">false</string>
    <string name="check_box_question_3_answer_4_is_correct">true</string>
    <string name="check_box_question_4">Which of these actors were nominated for an Oscar for his work in one of the \'Star Wars\' movies?</string>
    <string name="check_box_question_4_answer_1">PETER CUSHING</string>
    <string name="check_box_question_4_answer_2">HARRISON FORD</string>
    <string name="check_box_question_4_answer_3">EWAN MCGREGOR</string>
    <string name="check_box_question_4_answer_4">ALEC GUINNESS</string>
    <string name="check_box_question_4_answer_1_is_correct">false</string>
    <string name="check_box_question_4_answer_2_is_correct">false</string>
    <string name="check_box_question_4_answer_3_is_correct">false</string>
    <string name="check_box_question_4_answer_4_is_correct">true</string>
    <string name="check_box_question_5">Which of these bad guys were Darth Sidious\' Sith apprentices?</string>
    <string name="check_box_question_5_answer_1">DARTH VADER</string>
    <string name="check_box_question_5_answer_2">DARTH TYRANUS</string>
    <string name="check_box_question_5_answer_3">DARTH MAUL</string>
    <string name="check_box_question_5_answer_4">GENERAL GRIEVOUS</string>
    <string name="check_box_question_5_answer_1_is_correct">true</string>
    <string name="check_box_question_5_answer_2_is_correct">true</string>
    <string name="check_box_question_5_answer_3_is_correct">true</string>
    <string name="check_box_question_5_answer_4_is_correct">false</string>
    <string name="check_box_question_6">Which of these characters have said the line \"I have a bad feeling about this\" at some point?</string>
    <string name="check_box_question_6_answer_1">Luke Skywalker</string>
    <string name="check_box_question_6_answer_2">Han Solo</string>
    <string name="check_box_question_6_answer_3">C-3PO</string>
    <string name="check_box_question_6_answer_4">Princess Leia</string>
    <string name="check_box_question_6_answer_1_is_correct">true</string>
    <string name="check_box_question_6_answer_2_is_correct">true</string>
    <string name="check_box_question_6_answer_3_is_correct">true</string>
    <string name="check_box_question_6_answer_4_is_correct">true</string>
    <string name="check_box_question_7">Which actors have played the role of Anakin Skywalker / Darth Vader at some point?</string>
    <string name="check_box_question_7_answer_1">Sebastian Shaw</string>
    <string name="check_box_question_7_answer_2">Jake Lloyd</string>
    <string name="check_box_question_7_answer_3">Mark Hamil</string>
    <string name="check_box_question_7_answer_4">Hayden Christensen</string>
    <string name="check_box_question_7_answer_1_is_correct">true</string>
    <string name="check_box_question_7_answer_2_is_correct">true</string>
    <string name="check_box_question_7_answer_3_is_correct">false</string>
    <string name="check_box_question_7_answer_4_is_correct">true</string>
    <string name="check_box_question_8">Which of these non-Jedi/Sith characters use a lightsaber in the original trilogy?</string>
    <string name="check_box_question_8_answer_1">PRINCESS LEIA</string>
    <string name="check_box_question_8_answer_2">HAN SOLO</string>
    <string name="check_box_question_8_answer_3">LANDO CALRISSIAN</string>
    <string name="check_box_question_8_answer_4">BOBA FETT</string>
    <string name="check_box_question_8_answer_1_is_correct">false</string>
    <string name="check_box_question_8_answer_2_is_correct">true</string>
    <string name="check_box_question_8_answer_3_is_correct">false</string>
    <string name="check_box_question_8_answer_4_is_correct">false</string>
    <string name="check_box_question_9">What were the opposing organizations in the Clone Wars?</string>
    <string name="check_box_question_9_answer_1">THE GALACTIC REPUBLIC </string>
    <string name="check_box_question_9_answer_2">THE SEPARATIST ALLIANCE</string>
    <string name="check_box_question_9_answer_3">THE TUSKEN RAIDERS</string>
    <string name="check_box_question_9_answer_4">THE GUNGAN GRAND ARMY</string>
    <string name="check_box_question_9_answer_1_is_correct">true</string>
    <string name="check_box_question_9_answer_2_is_correct">true</string>
</resources>