<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.example.android.educationalapp.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/main_menu_bg" />

    <ImageView style="@style/MyBackgroundLayer" />

    <ScrollView style="@style/MyScrollView">

        <LinearLayout style="@style/MyLinearLayout1">

            <ImageView style="@style/MyHeaderImage" />

            <TextView
                android:id="@+id/activity_login_title"
                style="@style/MyMenuTitle1"
                android:text="@string/main_menu_title" />

            <TextView
                android:id="@+id/activity_login_type_your_name"
                style="@style/MyWhiteTextView"
                android:layout_marginBottom="@dimen/min_margin_padding_size"
                android:layout_marginTop="@dimen/min_margin_padding_size"
                android:text="@string/type_your_name" />

            <EditText
                android:id="@+id/activity_login_edit_text"
                style="@style/MyEditText"
                android:layout_marginLeft="@dimen/max_margin_padding_size"
                android:layout_marginRight="@dimen/max_margin_padding_size"
                android:hint="@string/type_your_name_hint"
                android:maxLength="16" />

            <Button
                android:id="@+id/activity_login_begin_button"
                style="@style/MyButton"
                android:onClick="beginTest"
                android:text="@string/begin_test" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
