<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.example.android.educationalapp.EditTextActivity">

    <ImageView
        android:id="@+id/activity_edit_text_background"
        style="@style/MyBackgroundImage"
        android:src="@drawable/_03_chewbacca" />

    <ImageView style="@style/MyBackgroundLayer" />

    <ScrollView style="@style/MyScrollView">

        <LinearLayout style="@style/MyLinearLayout1">

            <TextView
                android:id="@+id/activity_edit_text_title"
                style="@style/MyMenuTitle2"
                android:text="@string/main_menu_title" />

            <TextView style="@style/MyHorizontalBar" />

            <TextView
                android:id="@+id/activity_edit_text_question_number"
                style="@style/MyMenuTitle1"
                android:text="Question #" />

            <TextView
                android:id="@+id/activity_edit_text_description"
                style="@style/MyWhiteTextView"
                android:layout_marginBottom="@dimen/medium_margin_padding_size"
                android:text="Question" />

            <EditText
                android:id="@+id/activity_edit_text_answer"
                style="@style/MyEditText"
                android:hint="@string/edit_text_quiz_hint"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/activity_edit_text_advice"
                style="@style/MySmallWhiteTextView"
                android:layout_marginBottom="@dimen/min_margin_padding_size"
                android:text="@string/edit_text_advice" />

            <TextView style="@style/MyHorizontalBar" />

            <Button
                android:id="@+id/activity_edit_text_submit_button"
                style="@style/MyButton"
                android:onClick="submitEditTextAnswer"
                android:text="@string/submit_answer" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
