<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context="com.example.android.educationalapp.MainMenuActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/main_menu_bg" />

    <ImageView style="@style/MyBackgroundLayer" />

    <ScrollView style="@style/MyScrollView">

        <LinearLayout style="@style/MyLinearLayout1">

            <ImageView style="@style/MyHeaderImage" />

            <TextView
                android:id="@+id/activity_main_menu_title"
                style="@style/MyMenuTitle1"
                android:text="@string/main_menu_title" />

            <TextView
                android:id="@+id/activity_main_menu_description"
                style="@style/MyWhiteTextView"
                android:layout_marginBottom="@dimen/min_margin_padding_size"
                android:layout_marginTop="@dimen/min_margin_padding_size"
                android:text="@string/main_menu_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/activity_main_menu_begin_button"
                    style="@style/MyButton"
                    android:onClick="letsGo"
                    android:text="@string/lets_go" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>